tests: use local images in test page

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
       <p>Click on the Image Below to resize</p>
       <p>
         <img
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f5/Typescript.svg/64px-Typescript.svg.png"
+          src="./demo/64px-Typescript.svg.png"
         />
       </p>
       <p>Some initial <strong>bold</strong> text</p>
       <p>
         <img
-          src="https://upload.wikimedia.org/wikipedia/commons/a/a4/JavaScript_code.png"
+          src="./demo/JavaScript_code.png"
         />
       </p>
     </div>
@@ -27,13 +27,13 @@
       <p>Click on the Image Below to resize</p>
       <p>
         <img
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f5/Typescript.svg/64px-Typescript.svg.png"
+          src="./demo/64px-Typescript.svg.png"
         />
       </p>
       <p>Some initial <strong>bold</strong> text</p>
       <p>
         <img
-          src="https://upload.wikimedia.org/wikipedia/commons/a/a4/JavaScript_code.png"
+          src="./demo/JavaScript_code.png"
         />
       </p>
     </div>
