tests: rename local test image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <p>Click on the Image Below to resize</p>
       <p>
         <img
-          src="./demo/64px-Typescript.svg.png"
+          src="./demo/64px-Typescript.png"
         />
       </p>
       <p>Some initial <strong>bold</strong> text</p>
@@ -27,7 +27,7 @@
       <p>Click on the Image Below to resize</p>
       <p>
         <img
-          src="./demo/64px-Typescript.svg.png"
+          src="./demo/64px-Typescript.png"
         />
       </p>
       <p>Some initial <strong>bold</strong> text</p>
