--- a/index.html
+++ b/index.html
@@ -10,15 +10,11 @@
     <div id="editor" style="max-height: 500px; overflow: auto">
       <p>Click on the Image Below to resize</p>
       <p>
-        <img
-          src="./demo/64px-Typescript.png"
-        />
+        <img src="./demo/64px-Typescript.png" />
       </p>
       <p>Some initial <strong>bold</strong> text</p>
       <p>
-        <img
-          src="./demo/JavaScript_code.png"
-        />
+        <img src="./demo/JavaScript_code.png" />
       </p>
     </div>
 
@@ -26,15 +22,11 @@
     <div id="editor2" style="max-height: 500px; overflow: auto">
       <p>Click on the Image Below to resize</p>
       <p>
-        <img
-          src="./demo/64px-Typescript.png"
-        />
+        <img src="./demo/64px-Typescript.png" />
       </p>
       <p>Some initial <strong>bold</strong> text</p>
       <p>
-        <img
-          src="./demo/JavaScript_code.png"
-        />
+        <img src="./demo/JavaScript_code.png" />
       </p>
     </div>
     <p>
