test: use local images for preview build
This is the actual build used in the tests

--- a/preview/index.html
+++ b/preview/index.html
@@ -10,15 +10,11 @@
     <div id="editor" style="max-height: 500px; overflow: auto">
       <p>Click on the Image Below to resize</p>
       <p>
-        <img
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f5/Typescript.svg/64px-Typescript.svg.png"
-        />
+        <img src="./64px-Typescript.png" />
       </p>
       <p>Some initial <strong>bold</strong> text</p>
       <p>
-        <img
-          src="https://upload.wikimedia.org/wikipedia/commons/a/a4/JavaScript_code.png"
-        />
+        <img src="./JavaScript_code.png" />
       </p>
     </div>
 
@@ -26,15 +22,11 @@
     <div id="editor2" style="max-height: 500px; overflow: auto">
       <p>Click on the Image Below to resize</p>
       <p>
-        <img
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f5/Typescript.svg/64px-Typescript.svg.png"
-        />
+        <img src="./64px-Typescript.png" />
       </p>
       <p>Some initial <strong>bold</strong> text</p>
       <p>
-        <img
-          src="https://upload.wikimedia.org/wikipedia/commons/a/a4/JavaScript_code.png"
-        />
+        <img src="./JavaScript_code.png" />
       </p>
     </div>
     <p>
